# vulkan-test-rs

./: Cargo.toml  test_scene.scene
.cargo/: config.toml
laat_gunship/: scene.mtl
src/: app.rs  main.rs
src/common/: camera.rs  instance.rs  mesh.rs  mod.rs  render_batch.rs  scene.rs
src/gpu/: camera.rs  instance.rs  mod.rs  vertex3.rs
src/math/: matrix2.rs  matrix4.rs  mod.rs  traits.rs  vector2.rs  vector3.rs  vector4.rs
src/shaders/: comp.glsl  mandelbrot.glsl  test.vert  triangle_frag.glsl  triangle_vert.glsl
