[package]
name = "vulkano-test"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
serde = { version = "1.0", features=[ "derive" ] }
vulkano = "^0.35"
vulkano-shaders = "^0.35"
wavefront = "0.2.3"
winit = "0.30.13"
nalgebra = "*"
uuid = { version = "1.23.1", features = ["v4"] }
postcard = { version = "1.1", features = ["alloc"] }
